--- a/client/package.json
+++ b/client/package.json
@@ -3,12 +3,58 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@cyntler/react-doc-viewer": "^1.10.3",
+    "@lexical/react": "^0.7.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tiptap/extension-blockquote": "^2.0.0-beta.209",
+    "@tiptap/extension-bold": "^2.0.0-beta.209",
+    "@tiptap/extension-bullet-list": "^2.0.0-beta.209",
+    "@tiptap/extension-code": "^2.0.0-beta.209",
+    "@tiptap/extension-color": "^2.0.0-beta.209",
+    "@tiptap/extension-document": "^2.0.0-beta.209",
+    "@tiptap/extension-dropcursor": "^2.0.0-beta.209",
+    "@tiptap/extension-font-family": "^2.0.0-beta.209",
+    "@tiptap/extension-gapcursor": "^2.0.0-beta.209",
+    "@tiptap/extension-heading": "^2.0.0-beta.209",
+    "@tiptap/extension-highlight": "^2.0.0-beta.209",
+    "@tiptap/extension-horizontal-rule": "^2.0.0-beta.209",
+    "@tiptap/extension-image": "^2.0.0-beta.209",
+    "@tiptap/extension-italic": "^2.0.0-beta.209",
+    "@tiptap/extension-link": "^2.0.0-beta.209",
+    "@tiptap/extension-list-item": "^2.0.0-beta.209",
+    "@tiptap/extension-ordered-list": "^2.0.0-beta.209",
+    "@tiptap/extension-paragraph": "^2.0.0-beta.209",
+    "@tiptap/extension-strike": "^2.0.0-beta.209",
+    "@tiptap/extension-subscript": "^2.0.0-beta.209",
+    "@tiptap/extension-superscript": "^2.0.0-beta.209",
+    "@tiptap/extension-table": "^2.0.0-beta.209",
+    "@tiptap/extension-table-cell": "^2.0.0-beta.209",
+    "@tiptap/extension-table-header": "^2.0.0-beta.209",
+    "@tiptap/extension-table-row": "^2.0.0-beta.209",
+    "@tiptap/extension-text": "^2.0.0-beta.209",
+    "@tiptap/extension-text-align": "^2.0.0-beta.209",
+    "@tiptap/extension-text-style": "^2.0.0-beta.209",
+    "@tiptap/extension-underline": "^2.0.0-beta.209",
+    "@tiptap/react": "^2.0.0-beta.209",
+    "@tiptap/starter-kit": "^2.0.0-beta.209",
+    "antd": "^5.1.2",
+    "boxicons": "^2.1.4",
+    "docx2html": "^1.3.2",
+    "draft-js": "^0.11.7",
+    "lexical": "^0.7.5",
+    "mammoth": "^1.5.1",
     "react": "^18.2.0",
+    "react-doc-viewer": "^0.1.5",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "remixicon": "^2.5.0",
+    "sass": "^1.57.1",
+    "tiptap": "^1.32.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
