--- a/client/package.json
+++ b/client/package.json
@@ -39,19 +39,24 @@
     "@tiptap/extension-underline": "^2.0.0-beta.209",
     "@tiptap/react": "^2.0.0-beta.209",
     "@tiptap/starter-kit": "^2.0.0-beta.209",
+    "@wojtekmaj/async-array-utils": "^1.5.0",
     "antd": "^5.1.2",
+    "axios": "^1.2.2",
     "boxicons": "^2.1.4",
     "docx2html": "^1.3.2",
     "draft-js": "^0.11.7",
+    "form-data": "^4.0.0",
     "lexical": "^0.7.5",
     "mammoth": "^1.5.1",
     "react": "^18.2.0",
     "react-doc-viewer": "^0.1.5",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
+    "react-pdf": "^6.2.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "react-window": "^1.8.8",
     "remixicon": "^2.5.0",
     "sass": "^1.57.1",
     "tiptap": "^1.32.2",
