--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
     "@tiptap/react": "^2.0.0-beta.209",
     "@tiptap/starter-kit": "^2.0.0-beta.209",
     "@wojtekmaj/async-array-utils": "^1.5.0",
+    "@wojtekmaj/react-hooks": "^1.14.1",
     "antd": "^5.1.2",
     "axios": "^1.2.2",
     "boxicons": "^2.1.4",
