--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.2.2",
     "bootstrap": "^5.2.3",
     "form-data": "^4.0.0",
+    "pdfjs-dist": "^3.2.146",
     "react-dom": "^18.2.0",
     "react-pdf": "^6.2.2",
     "react-redux": "^8.0.5",
