--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.2.2",
     "bootstrap": "^5.2.3",
     "form-data": "^4.0.0",
+    "jquery": "^3.6.3",
     "pdfjs-dist": "^3.2.146",
     "react-dom": "^18.2.0",
     "react-pdf": "^6.2.2",
@@ -44,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/jquery": "^3.5.16"
   }
 }
