--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "dependencies": {
     "@enykeev/react-virtualized": "^9.22.4-mirror.1",
+    "@react-pdf-viewer/core": "^3.11.0",
+    "@react-pdf-viewer/page-navigation": "^3.11.0",
+    "@react-pdf-viewer/toolbar": "^3.11.0",
+    "@react-pdf-viewer/zoom": "^3.11.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
