--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@enykeev/react-virtualized": "^9.22.4-mirror.1",
     "@react-pdf-viewer/core": "^3.11.0",
