--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "react": "^18.2.0",
     "react-virtualized-auto-sizer": "^1.0.7",
     "react-window": "^1.8.8",
     "sass": "^1.57.1",
