--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,8 @@
 CLIENT_ID = 604199454690-24d3v0ju3ptl6u73e5n112c6lq0s787i.apps.googleusercontent.com
 CLIENT_SECRET = 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
- REDIRECT_URI = https://developers.google.com/oauthplayground
+REDIRECT_URI = https://developers.google.com/oauthplayground
 REFRESH_TOKEN = 1//04v_NaBr2K9MUCgYIARAAGAQSNwF-L9IrVIO3MymtuEa7zN67gmTao-6ERpvdXNlVDeFRaRbSXXsQh0_84KEj7xKgtz1d0hC0BdA
 DB_URL = mongodb+srv://Shantanumilkhe1:Shantanu123@cluster.gpedkh8.mongodb.net/?retryWrites=true&w=majority
+USER = 'tpcadmin'
+PASSWORD = 'tpcadmin@123'
+SECRET_KEY = 'PROJECTFORBOOKWEBANDTPC'
