--- a/server/package.json
+++ b/server/package.json
@@ -18,11 +18,13 @@
     "express-fileupload": "^1.4.0",
     "express-session": "^1.17.3",
     "googleapis": "^110.0.0",
+    "jsonwebtoken": "^9.0.0",
     "method-override": "^3.0.0",
     "mongoose": "^6.8.3",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
     "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "passport-local-mongoose": "^7.1.2"
   }
 }
