services backend completed

--- a/client/package.json
+++ b/client/package.json
@@ -16,15 +16,17 @@
     "@wojtekmaj/react-hooks": "^1.14.1",
     "axios": "^1.2.2",
     "bootstrap": "^5.2.3",
+    "cloudinary": "^1.33.0",
     "form-data": "^4.0.0",
     "jquery": "^3.6.3",
+    "multer-storage-cloudinary": "^4.0.0",
     "pdfjs-dist": "^3.3.122",
+    "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-pdf": "^6.2.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
-    "react": "^18.2.0",
     "react-virtualized-auto-sizer": "^1.0.7",
     "react-window": "^1.8.8",
     "sass": "^1.57.1",
