--- a/server/.env
+++ b/server/.env
@@ -2,7 +2,13 @@ CLIENT_ID = 604199454690-24d3v0ju3ptl6u73e5n112c6lq0s787i.apps.googleusercontent
 CLIENT_SECRET = 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
 REDIRECT_URI = https://developers.google.com/oauthplayground
 REFRESH_TOKEN = 1//048c7jY0xuJCdCgYIARAAGAQSNwF-L9Ir3Bg930Zza9WrkcjhWKfl41oFijrWE_XeZNFA7aKZbc2M35h8o_DOLb-8PUdzVUVVK5E
+
 DB_URL = mongodb+srv://Shantanumilkhe1:Shantanu123@cluster.gpedkh8.mongodb.net/?retryWrites=true&w=majority
+
+CLOUDINARY_CLOUD_NAME=dvfo4sxo2
+CLOUDINARY_CLOUD_KEY=128624816996976
+CLOUDINARY_CLOUD_SECRET=hGJow0JErccvTLBq_htglDIpM7c
+
 USER = 'tpcadmin'
 PASSWORD = 'tpcadmin@123'
 SECRET_KEY = 'PROJECTFORBOOKWEBANDTPC'
