--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "nodemon": "^2.0.20",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
-    "passport-local-mongoose": "^7.1.2"
+    "passport-local-mongoose": "^7.1.2",
+    "shortid": "^2.2.16"
   }
 }
