--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "pdfjs-dist": "^3.3.122",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-pdf": "^6.2.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
