--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "cloudinary": "^1.33.0",
     "connect-mongo": "^4.6.0",
     "cors": "^2.8.5",
+    "countapi-js": "^1.0.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
