--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "express-fileupload": "^1.4.0",
     "express-session": "^1.17.3",
     "googleapis": "^110.0.0",
+    "hummus": "^1.0.115",
     "jsonwebtoken": "^9.0.0",
     "method-override": "^3.0.0",
     "mongoose": "^6.8.3",
